--- a/Week7/SwingGUIBank/BankGUI.form
+++ b/Week7/SwingGUIBank/BankGUI.form
@@ -171,6 +171,14 @@
           <text value="Quit"/>
         </properties>
       </component>
+      <component id="81a44" class="javax.swing.JTextArea" binding="console">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
