Passed in ArrayLists for new Calculation methods in GradesCalculatorGUI.java

--- a/AssessmentSemesterOne/GradesCalculatorGUI.form
+++ b/AssessmentSemesterOne/GradesCalculatorGUI.form
@@ -116,7 +116,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="fe269" class="javax.swing.JSpinner" binding="level5Grade5">
+              <component id="fe269" class="javax.swing.JSpinner" binding="level5Grade5" custom-create="true">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -124,7 +124,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="8e7c9" class="javax.swing.JSpinner" binding="level5Grade8">
+              <component id="8e7c9" class="javax.swing.JSpinner" binding="level5Grade8" custom-create="true">
                 <constraints>
                   <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -132,7 +132,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="88402" class="javax.swing.JSpinner" binding="level5Grade6">
+              <component id="88402" class="javax.swing.JSpinner" binding="level5Grade6" custom-create="true">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -140,7 +140,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="cf6b8" class="javax.swing.JSpinner" binding="level5Grade7">
+              <component id="cf6b8" class="javax.swing.JSpinner" binding="level5Grade7" custom-create="true">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -248,15 +248,15 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="82a22" class="javax.swing.JSpinner" binding="level5Grade1">
+              <component id="82a22" class="javax.swing.JSpinner" binding="level5Grade1" custom-create="true">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="40" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
                 <properties/>
               </component>
-              <component id="edceb" class="javax.swing.JSpinner" binding="level5Grade2">
+              <component id="edceb" class="javax.swing.JSpinner" binding="level5Grade2" custom-create="true">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -264,7 +264,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="aa690" class="javax.swing.JSpinner" binding="level5Grade3">
+              <component id="aa690" class="javax.swing.JSpinner" binding="level5Grade3" custom-create="true">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -272,7 +272,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="d1efc" class="javax.swing.JSpinner" binding="level5Grade4">
+              <component id="d1efc" class="javax.swing.JSpinner" binding="level5Grade4" custom-create="true">
                 <constraints>
                   <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -438,7 +438,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="1386a" class="javax.swing.JSpinner" binding="level6Grade5">
+              <component id="1386a" class="javax.swing.JSpinner" binding="level6Grade5" custom-create="true">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -446,7 +446,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="74749" class="javax.swing.JSpinner" binding="level6Grade6">
+              <component id="74749" class="javax.swing.JSpinner" binding="level6Grade6" custom-create="true">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -454,7 +454,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="23ca4" class="javax.swing.JSpinner" binding="level6Grade7">
+              <component id="23ca4" class="javax.swing.JSpinner" binding="level6Grade7" custom-create="true">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -462,7 +462,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="dc7cc" class="javax.swing.JSpinner" binding="level6Grade8">
+              <component id="dc7cc" class="javax.swing.JSpinner" binding="level6Grade8" custom-create="true">
                 <constraints>
                   <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -568,7 +568,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="2e4b4" class="javax.swing.JSpinner" binding="level6Grade1">
+              <component id="2e4b4" class="javax.swing.JSpinner" binding="level6Grade1" custom-create="true">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -576,7 +576,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="b2ad4" class="javax.swing.JSpinner" binding="level6Grade2">
+              <component id="b2ad4" class="javax.swing.JSpinner" binding="level6Grade2" custom-create="true">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -584,7 +584,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="307d" class="javax.swing.JSpinner" binding="level6Grade3">
+              <component id="307d" class="javax.swing.JSpinner" binding="level6Grade3" custom-create="true">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
@@ -592,7 +592,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="1eed6" class="javax.swing.JSpinner" binding="level6Grade4">
+              <component id="1eed6" class="javax.swing.JSpinner" binding="level6Grade4" custom-create="true">
                 <constraints>
                   <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="-1"/>
