--- a/AssessmentSemesterOne/GradesCalculatorGUI.form
+++ b/AssessmentSemesterOne/GradesCalculatorGUI.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="1053" height="686"/>
     </constraints>
     <properties>
+      <enabled value="false"/>
       <foreground color="-1741197"/>
     </properties>
     <border type="none"/>
@@ -87,7 +88,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="false"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="20f3b" binding="level5ResultsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -254,7 +257,9 @@
                     <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <enabled value="true"/>
+                </properties>
               </component>
               <component id="edceb" class="javax.swing.JSpinner" binding="level5Grade2" custom-create="true">
                 <constraints>
@@ -286,7 +291,9 @@
                     <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <enabled value="true"/>
+                </properties>
               </component>
               <component id="f5dde" class="javax.swing.JTextField" binding="level5Credits2">
                 <constraints>
@@ -342,7 +349,9 @@
                     <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <enabled value="true"/>
+                </properties>
               </component>
               <component id="66fa7" class="javax.swing.JTextField" binding="module5TextField2">
                 <constraints>
