--- a/AssessmentSemesterOne/GradesCalculatorGUI.form
+++ b/AssessmentSemesterOne/GradesCalculatorGUI.form
@@ -698,6 +698,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <focusable value="false"/>
                   <text value="Calculate"/>
                 </properties>
               </component>
@@ -897,6 +898,7 @@
           </grid>
         </constraints>
         <properties>
+          <focusable value="false"/>
           <foreground color="-9742107"/>
           <text value="Clear"/>
         </properties>
@@ -908,6 +910,7 @@
           </grid>
         </constraints>
         <properties>
+          <focusable value="false"/>
           <foreground color="-1761478"/>
           <text value="Quit"/>
         </properties>
